give basic structure to the page
divide the page into head, main, and foot

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title>Canvas Projects</title>
 </head>
 <body>
-    
+    <div class="body-container">
+        <div class="head-container">
+            <div class="header">Canvas Projects</div>
+        </div>
+        <div class="main-container">
+            <div class="table">
+                <div class="projects">
+                    <button>Random Walker</button>
+                    <button>Multiple Walkers</button>
+                    <button>Snow Fall</button>
+                    <button>The Void</button>
+                    <button>Snake Race</button>
+                </div>
+            </div>
+        </div>
+        <div class="foot-container">
+            <div class="footer"><a href="https://github.com/Chinmay0303/05_Canvas" target="_blank">Chinmay0303</a></div>
+        </div>
+    </div>
 </body>
 </html>
