--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas Projects</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="./main.js" defer></script>
 </head>
 <body>
     <div class="body-container">
@@ -14,11 +15,11 @@
         <div class="main-container">
             <div class="table">
                 <div class="projects">
-                    <button>Random Walker</button>
-                    <button>Multiple Walkers</button>
-                    <button>Snow Fall</button>
-                    <button>The Void</button>
-                    <button>Snake Race</button>
+                    <button class="button">Random Walker</button>
+                    <button class="button">Multiple Walkers</button>
+                    <button class="button">Snow Fall</button>
+                    <button class="button">The Void</button>
+                    <button class="button">Snake Race</button>
                 </div>
             </div>
         </div>
