each button links new script to the page
cross button refreshes the page

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="main-container">
             <div class="table">
                 <div class="projects">
-                    <button class="button">Random Walker</button>
-                    <button class="button">Multiple Walkers</button>
-                    <button class="button">Snow Fall</button>
-                    <button class="button">The Void</button>
-                    <button class="button">Snake Race</button>
+                    <button class="button" id="button-1">Random Walker</button>
+                    <button class="button" id="button-2">Multiple Walkers</button>
+                    <button class="button" id="button-3">Snow Fall</button>
+                    <button class="button" id="button-4">The Void</button>
+                    <button class="button" id="button-5">Snake Race</button>
                 </div>
             </div>
         </div>
